Fix navbar overlap issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,7 +31,7 @@
   position: sticky;
   top: 0;
   background-color: rgb(255, 255, 255);
-
+z-index: 1000;
   
 }
 .navbar h1 {
